@@ -1,5 +1,9 @@
 2003-09-01  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Added the evolution-groupwise module.
+
+2003-09-01  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Added the gnome-backup module.
 
 2003-08-31  Christian Rose  <menthos@menthos.com>
